# swarm-protocol

./: README.md
Protocol/: version.proto
Protocol/agent/: agent_packet.proto  packet.proto  server_packet.proto
Protocol/agent/handshake/: agent.proto  authentication.proto  connection.proto  encryption.proto  server.proto
Protocol/agent/payload/: agent.proto  message.proto  server.proto
Protocol/agent/payload/agent/: disconnect.proto  heartbeat.proto
Protocol/agent/payload/server/: disconnect.proto
SDK/Rust/swarm-protocol-sdk/: Cargo.toml
SDK/Rust/swarm-protocol-sdk/src/: agent.rs  lib.rs  main.rs  networking.rs  protocol.rs  server.rs
SDK/Rust/swarm-protocol-sdk/src/agent/: client.rs  networking.rs  server.rs
SDK/Rust/swarm-protocol-sdk/src/server/: agent_connection.rs  agent_connection_manager.rs  agent_server.rs
SDK/Rust/swarm-protocol-server/: Cargo.toml  build.rs
SDK/Rust/swarm-protocol-server/src/: main.rs  networking.rs  server.rs
SDK/Rust/swarm-protocol-server/src/server/: agent_connection.rs  agent_server.rs
